# xkcc

./: .gitignore  CMakeLists.txt
include/: authentication.hpp  channel.hpp  main.hpp
plugins/: base.lua
src/: channel.cpp  main.cpp
